--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26"
-  }
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
+  },
+  "homepage": "https://nimbledodo.github.io/NOMFLIX"
 }
